TestSuite/PascalABCTests/errors/err0384.pas
begin
  var x := nil??nil;
end.